fixed the overlapping volume sections when the viewport resizes. BOOM!

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 section {
-  height: 100vh;
+  height: 100%;
 }
+
+/* .volume {
+  height: 100%;
+}*/
